# f1analyzerai

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: test-packages.yml
ui/f1analyzeai_app/: pyproject.toml  start_app.py
ui/f1analyzeai_app/src/f1analyzeai_app/: app.py
